tests/test_assets/semantic/invalid/switch/case_falls_through.cog
Color :: enum {
    Red,
    Green,
}

test::(color: Color) -> i32 {
    switch color {
        case Color.Red:
            return 1;

        case Color.Green: {
            value := 2;
        }
    }
}