tests/test_assets/semantic/invalid/switch/case_falls_through.expected
semantic error at line 6: non-void function may not return a value
1 semantic error generated.
